Correction du problème du footer

--- a/html/cart.html
+++ b/html/cart.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="../image/logo.png">
         <link rel="stylesheet" href="../css/cart.css">
+        <link rel="stylesheet" href="../css/headerFooter.css">
     </head>
 
     <body>
@@ -53,6 +54,61 @@
                 </div>
             </form>
         </div>
+
+        <footer>
+            <section>
+                <img class="logo-end" src="../image/logo-end.png" alt="">
+            
+                <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non mollitia obcaecati, rerum odit nulla amet porro vel reprehenderit dolor quia corporis fuga consectetur quas ad necessitatibus illo ex eaque quidem?</p>
+            </section>
+            <aside class="footer-space"></aside>
+            <div>
+                <p class="social">SUIVEZ NOUS SUR LES RESEAUX</p>
+                <a href="https://www.facebook.com/?locale=fr_FR">
+                    <img class="res" src="../image/facebook.png" alt="reseau social">
+                </a>
+                <a href="https://fr.wikipedia.org/wiki/RSS">
+                    <img class="res" src="../image/rss.png" alt="reseau social">
+                </a>
+                <a href="https://twitter.com/?lang=fr">
+                    <img class="res" src="../image/x.png" alt="reseau social">
+                </a>
+                <a href="https://www.instagram.com/">
+                    <img class="res" src="../image/insta.png" alt="reseau social">
+                </a>
+                <a href="https://fr.linkedin.com/">
+                    <img class="res" src="../image/linkedin.png" alt="reseau social">
+                </a>
+            </div>
+            <aside class="footer-space"></aside>
+            <article>
+                <span>
+                    <p class="sub-links">PLAN DU SITE</p>
+                    <a href="../index.html" class="sub-link">Accueil</a>
+                    <a href="products.html#accessoiresTitle" class="sub-link">Accessoires</a>
+                    <a href="products.html" class="sub-link">Produits</a>
+                </span>
+                <span>
+                    <p class="sub-links">QUI SOMMES NOUS</p>
+                    <a href="../index.html" class="sub-link">Profil de l'entreprise</a>
+                    <a href="../index.html" class="sub-link">Mentions légales</a>
+                    <a href="../index.html" class="sub-link">Conditions d'utilisation</a>
+                
+                </span>
+                <span class="social">
+                    <p class="sub-title">VOS QUESTIONS</p>
+                    <a class="sub-link">Questions fréquentes</a>
+                    <a class="sub-link">Modalités du réglement</a>
+                    <a class="sub-link">Modes de livraison</a>
+                </span>
+            </article>
+            <aside class="footer-space"></aside>
+            <ul>
+                <li>
+                    <p>© Copyright 2024 - Wireless Market</p>
+                </li>
+            </ul>
+        </footer>
 
     </body>
 </html>
