--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="image/logo.png">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/headerFooter.css">
     </head>
 
     <body>
@@ -193,8 +194,8 @@
                 <span>
                     <p class="sub-links">PLAN DU SITE</p>
                     <a href="index.html" class="sub-link">Accueil</a>
-                    <a href="index.html" class="sub-link">Accessoires</a>
-                    <a href="index.html" class="sub-link">Produits</a>
+                    <a href="html/products.html#accessoiresTitle" class="sub-link">Accessoires</a>
+                    <a href="html/products.html" class="sub-link">Produits</a>
                 </span>
                 <span>
                     <p class="sub-links">QUI SOMMES NOUS</p>
