Correction du problème de responsive sur la page index.html. Et changement de description du footer.

--- a/html/cart.html
+++ b/html/cart.html
@@ -59,7 +59,7 @@
             <section>
                 <img class="logo-end" src="../image/logo-end.png" alt="">
             
-                <p class="desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non mollitia obcaecati, rerum odit nulla amet porro vel reprehenderit dolor quia corporis fuga consectetur quas ad necessitatibus illo ex eaque quidem?</p>
+                <p class="desc">Wireless Market, votre destination privilégiée pour les smartphones haut de gamme et les accessoires de qualité. Découvrez notre sélection exquise de téléphones dernier cri, des iPhones aux Samsung Galaxy, ainsi que des chargeurs, des écouteurs sans fil et bien plus encore.</p>
             </section>
             <aside class="footer-space"></aside>
             <div>
